--- a/css/base.css
+++ b/css/base.css
@@ -16,10 +16,43 @@
 	text-align: right;
 	margin-top: 2em;
 }
-#header nav ul li {
-	display:inline-block;
+#header nav ul li a {
+	display: inline-block;
 	color: #fff;
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 0.75em 2em;
 }
+#header nav ul li a.btn {
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px; /* border radius */
+  border:2px solid #fff;
+ }
+ #header nav ul li a.btn:hover {
+  background:#fff;
+  color:#009be8;
+ }
+ #header .headertext {
+ 	
+ }
+ 	#header h1 {
+ 		color: #fff;
+ 		font-weight: 300;
+ 		font-size: 4.5em;
+ 		line-height: 1;
+ 		text-shadow: 0 1px 2px rgba(0,0,0,.2);
+ 		margin-bottom: 0.3em;
+ 		margin-top: 10em;
+ 	}
+
+ 	#header p {
+ 		color: #d5d5d5;
+ 		font-size: 1.33em;
+ 		line-height: 1.4;
+ 		text-shadow: 0 1px 2px rgba(0,0,0,.2);
+ 		margin-bottom: 1.2em;
+ 	}
+ 	#header p strong {
+ 		color: #fff;
+ 	}
