--- a/css/base.css
+++ b/css/base.css
@@ -23,19 +23,8 @@
 	text-decoration: none;
 	padding: 0.75em 2em;
 }
-#header nav ul li a.btn {
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  border-radius: 8px; /* border radius */
-  border:2px solid #fff;
- }
- #header nav ul li a.btn:hover {
-  background:#fff;
-  color:#009be8;
- }
- #header .headertext {
- 	
- }
+
+
  	#header h1 {
  		color: #fff;
  		font-weight: 300;
@@ -43,7 +32,7 @@
  		line-height: 1;
  		text-shadow: 0 1px 2px rgba(0,0,0,.2);
  		margin-bottom: 0.3em;
- 		margin-top: 10em;
+ 		margin-top: 2em;
  	}
 
  	#header p {
@@ -57,58 +46,7 @@
  		color: #fff;
  	}
 
-input[type="submit"]
-input[type="reset"]
-input[type="button"] 
-{
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
-	-moz-background-clip: padding;
-	-webkit-background-clip: padding-box;
-	background-clip: padding-box;
-	background-color: #009ae8;
-	color: #fff;
-	font-size: 1.2em;
-	border: 0;
-	text-transform: uppercase;
-	font-weight: 900;
-	padding: 0.82em 2.5em;
-	cursor: pointer;
-	margin: 0;
-}
-.button:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover {
-	background:#0483c3;
-}
-.button:active,
-button:active,
-input[type="submit"]:active,
-input[type="reset"]:active,
-input[type="button"]:active { }
-...
-input[type="text"],
-input[type="password"],
-input[type="email"],
-textarea,
-select {
-	border: 1px solid #ccc;
-	padding: 0.75em 1em;
-	outline: none;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
-	font: 1.2em "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #777;
-	margin: 90%;
-	width: 90%;
-	max-width: 100%;
-	display: block;
-	margin-bottom: 20px;
-}
+
 
 /* Benefits */
 #benefits {
@@ -253,13 +191,57 @@ select {
 		color: #5d5d5d;
 		font-weight: 900;
 	}
+	#action {
+		background:url('../images/action.jpg') top center no-repeat;
+		background-size: cover;
+		min-height: 180px;
+		width: 100%;
+		padding: 4em 0;
+		text-align: center;
+	}
+	#action h2 {
+		color: #fff;
+		font-weight: 300;
+		text-shadow: 0 1px 2px rgba(0,0,0,.2);
+	}
+	#action p {
+		color: #fff;
+		text-shadow: 0 1px 2px rgba(0,0,0,.2);
+		font-size: 1.2em;
+	}
+	#action .row {
+		margin-top: 3em;
+	}
 
-
-
-
-
-
-
+	/* Footer */
+	#footer {
+		background: #009be8;
+		padding: 1em 0;
+	}
+	#footer nav ul {
+		margin-top: 0.5em;
+	}
+	#footer nav ul li {
+		display: inline;
+		margin: 0;
+	}
+	#footer nav ul li a {
+		color: #fff;
+		text-decoration: none;
+		text-transform: uppercase;
+		margin: 0 1em 0 0;
+		font-size: 1.1em
+	}
+	#footer img {
+		float: right;
+	}
+	#footer p {
+		color: #fff;
+		line-height: 1;
+		text-transform: uppercase;
+		font-size: 0.7em;
+		margin-top: 0.5em;
+	}
 
 
 
