--- a/css/base.css
+++ b/css/base.css
@@ -17,6 +17,7 @@
 	margin-top: 2em;
 }
 #header nav ul li a {
+	text-align: right;
 	display: inline-block;
 	color: #fff;
 	text-transform: uppercase;
@@ -25,7 +26,8 @@
 }
 
  #header .headertext {
- 	
+		animation-delay: 0.7;
+		-webkit-animation-delay: 0.7s; 	
  }
  	#header h1 {
  		color: #fff;
@@ -35,6 +37,7 @@
  		text-shadow: 0 1px 2px rgba(0,0,0,.2);
  		margin-bottom: 0.3em;
  		margin-top: 2em;
+
  	}
 
  	#header p {
@@ -48,6 +51,9 @@
  		color: #fff;
  	}
 
+ 	#header .headerbutt {
+ 		margin-bottom: 2em;
+ 	}
 
 
 /* Benefits */
